--- a/src/components/SortableAccordion/SortableAccordion.module.css
+++ b/src/components/SortableAccordion/SortableAccordion.module.css
@@ -1,12 +1,10 @@
 .accordionContainer {
-  width: 1000px;
+  width: 100%;
   /* max-width: 400px; */
-  font-family: Arial, sans-serif;
 }
 
 .accordionItem {
   border: 1px solid #ddd;
-  margin: 5px 0;
   border-radius: 5px;
   background: #fff;
   transition: 0.3s;
@@ -35,6 +33,7 @@
 .headerleftItems {
   display: flex;
   gap: 10px;
+  align-items: center;
 }
 
 .headerRightItems {
